Create a more robust address parsing system.

--- a/FangameReader/FangameReader.vcxproj
+++ b/FangameReader/FangameReader.vcxproj
@@ -273,6 +273,7 @@
     <Xml Include="FangameResources\FangameInfo\Invincible Alien\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\KiraKira\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\perfect bear\layout.xml" />
+    <Xml Include="FangameResources\FangameInfo\SaveTheSeries\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\Soulless\layout.xml" />
     <Xml Include="FangameResources\FangameInfo\userConnections.xml" />
     <Xml Include="FangameResources\TableView.xml">
